# playwright-stealth-ultimate

./: .gitignore  .yamllint.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README2.md  __init__.py  fix_examples.py  pyproject.toml  run_all_tests.py  run_benchmark.py  setup.py  stealth.py  stealth_fallback.py  test_direct.py  test_fixed_injection.py  test_manual_injection.py  test_simple.py  test_stealth_fixed.py  verify_structure.ps1  version.py
adapters/: __init__.py  playwright.py  selenium.py
benchmark/: __init__.py  scenarios.py  suite.py
cache/: __init__.py
config/policies/: strict.yaml
config/profiles/: windows_10_chrome_138.yaml
core/: __init__.py  profile.py
diagnostics/: __init__.py  analyzer.py
documentations/: README.md  docs_overview.md  faq.md  mkdocs.yml
documentations/advanced/: benchmarking.md  custom_profiles.md  evasion_modules.md  fingerprinting.md  performance.md  testing.md
documentations/api/: adapters.md  config.md  core.md  index.md  models.md  services.md
documentations/guides/: configuration.md  installation.md  migration.md  quickstart.md  troubleshooting.md  usage.md
documentations/reference/: changelog.md  contributing.md  license.md
examples/: behavior_simulation.py
examples/advanced/: behavior_simulation.py  full_configuration.py  profile_migration.py
examples/basic/: custom_profile.py  simple_injection.py
js/: __init__.py  audio.js  canvas.js  chrome.app.js  concurrency.js  loader.py  modules.py  navigator.deviceMemory.js  navigator.languages.js  navigator.maxTouchPoints.js  navigator.platform.js  navigator.plugins.js  navigator.userAgent.js  navigator.vendor.js  navigator.webdriver.js  utils.js  webgl.anisotropy.js  webgl.js  webgl.vendor.js
migration/: engine.py
migration/schemas/: v1_1.py
models/: __init__.py  config.py  plan.py
playwright_stealth/: __init__.py  version.py
playwright_stealth/adapters/: __init__.py  playwright.py
playwright_stealth/benchmark/: report.py
playwright_stealth/cache/: memory.py  protocol.py
playwright_stealth/config/: __init__.py  loader.py
playwright_stealth/core/: __init__.py  engine.py  profile.py  types.py
playwright_stealth/diagnostics/: recommendations.py
playwright_stealth/js/: chrome.csi.js  chrome.hairline.js  chrome.load.times.js  chrome.runtime.js  errors.js  evasions.proxies.js  fonts.js  generate.magic.arrays.js  iframe.contentWindow.js  intl.js  media.codecs.js  navigator.hardware.js  navigator.permissions.js  (+6 more)
scripts/: __init__.py  patch.py
services/: __init__.py  observability.py  stealth.py
tests/: __init__.py  conftest.py  evasion_modules.py
(+36 files in other folders)
