[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-stealth-ultimate"
version = "5.0.0"
description = "Framework d'évasion anti-bot pour Playwright et Selenium"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jeff", email = "jeffx@live.fr"}
]
keywords = ["playwright", "selenium", "stealth", "anti-bot", "scraping"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "playwright>=1.40.0",
    "cachetools>=5.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
selenium = ["selenium>=4.0.0"]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "psutil>=7.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/jeffx/playwright-stealth-ultimate"
"Bug Reports" = "https://github.com/jeffx/playwright-stealth-ultimate/issues"
"Source" = "https://github.com/jeffx/playwright-stealth-ultimate"

[project.scripts]
stealth-benchmark = "examples.advanced.benchmark_runner:main"

[tool.setuptools]
include-package-data = true
packages = ["playwright_stealth"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
playwright_stealth = [
    "js/*.js",
    "config/**/*.yaml",
    "config/**/*.json",
    "py.typed",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marque les tests d'intégration",
    "slow: marque les tests lents",
    "playwright: marque les tests nécessitant Playwright",
    "selenium: marque les tests nécessitant Selenium",
]